# dfv

./: .gitignore  README.md  pyproject.toml
demo_address_book/: views.py
demo_address_book/templates/demo_address_book/: address_book_page.html  detail_element.html  list_element.html
dfv/: __init__.py  element.py  element_tests.py  form.py  form_tests.py  htmx.py  http_actions.py  inject_args.py  inject_params.py  inject_params_test.py  middleware.py  response_handler.py  response_handler_tests.py  route.py  route_tests.py  swap_oob_tests.py  test_element.py  test_form.py  test_params_to_args.py  test_view.py  testutils.py  utils.py  view.py  view_stack.py  view_tests.py
dfv/static/: dfv.js  dfv_swap_merge.js
dfv/templatetags/: dfv.py
main/: admin.py  apps.py
main/templates/: base.html
main/templates/elements/: Level3AElement.html
main/templates/form/: FormElement.html
main/views/: demos.py  elements.py  form.py
project/: settings.py  urls.py
scripts/: check.sh  db_reset.sh  publish.sh
